keypad_layout completed

--- a/app/src/main/res/layout/keypad_layout.xml
+++ b/app/src/main/res/layout/keypad_layout.xml
@@ -1,9 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:grid="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    app:columnCount="4"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:rowCount="5"
+    app:useDefaultMargins="false"
     tools:context="pk.nimgade.calculator.MainActivity"
     tools:showIn="@layout/content_main">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/MainActivity_7_button"
+        style="@style/ButtonKeyPad"
+        android:text="7"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_8_button"
+        style="@style/ButtonKeyPad"
+        android:text="8"
+        app:layout_column="1"
+        app:layout_row="0"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_9_button"
+        style="@style/ButtonKeyPad"
+        android:text="9"
+        app:layout_column="2"
+        app:layout_row="0"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_delete_clear_button"
+        style="@style/ButtonKeyPad"
+        android:text="DEL"
+        app:layout_column="3"
+        app:layout_row="0"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_4_button"
+        style="@style/ButtonKeyPad"
+        android:text="4"
+        app:layout_column="0"
+        app:layout_row="1"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_5_button"
+        style="@style/ButtonKeyPad"
+        android:text="5"
+        app:layout_column="1"
+        app:layout_row="1"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_6_button"
+        style="@style/ButtonKeyPad"
+        android:text="6"
+        app:layout_column="2"
+        app:layout_row="1"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_plus_button"
+        style="@style/ButtonKeyPad"
+        android:text="+"
+        app:layout_column="3"
+        app:layout_row="1"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_1_button"
+        style="@style/ButtonKeyPad"
+        android:text="1"
+        app:layout_column="0"
+        app:layout_row="2"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_2_button"
+        style="@style/ButtonKeyPad"
+        android:text="2"
+        app:layout_column="1"
+        app:layout_row="2"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_3_button"
+        style="@style/ButtonKeyPad"
+        android:text="3"
+        app:layout_column="2"
+        app:layout_row="2"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_minus_button"
+        style="@style/ButtonKeyPad"
+        android:text="-"
+        app:layout_column="3"
+        app:layout_row="2"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_dot_period_button"
+        style="@style/ButtonKeyPad"
+        android:text="."
+        app:layout_column="0"
+        app:layout_row="3"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_0_button"
+        style="@style/ButtonKeyPad"
+        android:text="0"
+        app:layout_column="1"
+        app:layout_row="3"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_equals_button"
+        style="@style/ButtonKeyPad"
+        android:text="="
+        app:layout_column="2"
+        app:layout_columnSpan="2"
+        app:layout_row="3"
+        app:layout_rowSpan="2"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+
+    <Button
+        android:id="@+id/MainActivity_divide_button"
+        style="@style/ButtonKeyPad"
+        android:text="÷"
+        app:layout_column="0"
+        app:layout_row="4"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+    <Button
+        android:id="@+id/MainActivity_multiply_button"
+        style="@style/ButtonKeyPad"
+        android:text="x"
+        app:layout_column="1"
+        app:layout_row="4"
+        grid:layout_columnWeight="1"
+        grid:layout_gravity="fill"
+        grid:layout_rowWeight="1" />
+
+
+</android.support.v7.widget.GridLayout>
