--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="android:background">?attr/selectableItemBackground</item>
 
         <item name="android:textColor">@color/button_text</item>
+        <item name="android:onClick">inputCollector</item>
     </style>
 
 
