--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,10 +8,11 @@
         <item name="android:clickable">true</item>
 
         <item name="android:gravity">center</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
 
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:textColor">@color/button_text</item>
         <item name="android:onClick">inputCollector</item>
 
