--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,9 +26,10 @@
 
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
 
+        <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:textColor">@color/button_text</item>
         <item name="android:onClick">inputCollector</item>
     </style>
