--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="textSize_Keypad_Button">25dp</dimen>
+    <dimen name="textSize_InputEquationText">15dp</dimen>
 </resources>
