--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,31 +12,37 @@
         android:id="@+id/MainActivity_history_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/MainActivity_input_textView"
+        android:layout_margin="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/MainActivity_Equation_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
-        android:id="@+id/MainActivity_input_textView"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="right|bottom"
-        android:text="Input"
-        style="@style/InputTextDisplay"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        app:layout_constraintBottom_toTopOf="@+id/MainActivity_horizontal_guideline"
+        android:id="@+id/MainActivity_Equation_textView"
+        style="@style/InputEquationTextDisplay"
+        android:text="Equation Input"
+        app:layout_constraintBottom_toTopOf="@+id/MainActivity_input_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MainActivity_history_recyclerView" />
 
+
+    <TextView
+        android:id="@+id/MainActivity_input_textView"
+        style="@style/InputTextDisplay"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="right|bottom"
+        android:text="Input"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        app:layout_constraintBottom_toTopOf="@+id/MainActivity_horizontal_guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MainActivity_Equation_textView" />
+
     <android.support.constraint.Guideline
         android:id="@+id/MainActivity_horizontal_guideline"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.35" />
