--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,9 +16,10 @@
         <item name="android:textColor">@color/button_text</item>
         <item name="android:onClick">inputCollector</item>
 
+
     </style>
 
-    <style name="InputTextDisplay" parent="android:TextAppearance.Widget.TextView">
+    <style name="InputTextDisplay" parent="android:TextAppearance.Material.Widget.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
@@ -28,6 +29,23 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:longClickable">true</item>
+
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:clickable">false</item>
+        <item name="android:layout_margin">4dp</item>
+
+
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">@dimen/textSize_InputEquationText</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:longClickable">true</item>
     </style>
 
 </resources>
