--- a/app/src/main/res/layout/keypad_layout.xml
+++ b/app/src/main/res/layout/keypad_layout.xml
@@ -163,6 +163,7 @@
         android:id="@+id/MainActivity_equals_button"
         style="@style/ButtonKeyPad"
         android:text="="
+        android:onClick="computeEquals"
         app:layout_column="2"
         app:layout_columnSpan="2"
         app:layout_row="3"
