--- a/app/src/main/res/layout/keypad_layout.xml
+++ b/app/src/main/res/layout/keypad_layout.xml
@@ -54,6 +54,8 @@
         style="@style/ButtonKeyPad"
         android:text="DEL"
         app:layout_column="3"
+        android:onClick="clearEquation"
+        android:longClickable="true"
         app:layout_row="0"
         grid:layout_columnWeight="1"
         grid:layout_gravity="fill"
