--- a/app/src/main/res/layout/keypad_layout.xml
+++ b/app/src/main/res/layout/keypad_layout.xml
@@ -9,6 +9,7 @@
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
+    android:background="@android:color/white"
     app:columnCount="4"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
