--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,7 +4,7 @@
     <style name="ButtonKeyPad" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">true</item>
 
         <item name="android:gravity">center</item>
@@ -22,7 +22,7 @@
     <style name="InputTextDisplay" parent="android:TextAppearance.Material.Widget.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
         <item name="android:layout_margin">4dp</item>
 
@@ -37,7 +37,7 @@
     <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
         <item name="android:layout_margin">4dp</item>
 
