--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -32,6 +32,7 @@
         <item name="android:longClickable">true</item>
 
         <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
@@ -46,6 +47,8 @@
         <item name="android:textSize">@dimen/textSize_InputEquationText</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:longClickable">true</item>
+        <item name="android:textColor">@android:color/black</item>
+
     </style>
 
 </resources>
