--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,17 +14,17 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:textColorSecondary">@android:color/darker_gray</item>
+        <item name="android:textColorSecondary">@android:color/holo_purple</item>
         <item name="android:actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorSecondary">@android:color/darker_gray</item>
+        <item name="android:textColorSecondary">@android:color/holo_purple</item>
         <item name="android:actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
     </style>
 
     <style name="actionOverflowButtonStyle" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@android:color/darker_gray</item>
+        <item name="android:tint">@android:color/holo_purple</item>
     </style>
 
 
@@ -55,6 +55,7 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textColor">@android:color/black</item>
 
     </style>
 
@@ -70,6 +71,7 @@
         <item name="android:textSize">@dimen/textSize_InputEquationText</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:longClickable">true</item>
+        <item name="android:textColor">@android:color/black</item>
 
     </style>
 
