updated about screen

--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="textSize_InputEquationText">25dp</dimen>
 
 
+    <dimen name="textSize_AboutTextView">15dp</dimen>
+
+
 </resources>
