--- a/app/src/main/res/values-sw1080dp/dimens.xml
+++ b/app/src/main/res/values-sw1080dp/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="textSize_Keypad_Button">45dp</dimen>
     <dimen name="textSize_InputEquationText">35dp</dimen>
+
+
+    <dimen name="textSize_AboutTextView">20dp</dimen>
+
 </resources>
