--- a/app/src/main/res/values-sw1600dp/dimens.xml
+++ b/app/src/main/res/values-sw1600dp/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="textSize_Keypad_Button">75dp</dimen>
     <dimen name="textSize_InputEquationText">60dp</dimen>
 
+    <dimen name="textSize_AboutTextView">25dp</dimen>
 
 </resources>
