--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,7 +72,20 @@
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:longClickable">true</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
 
+    <style name="aboutTextView" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
+        <item name="android:clickable">false</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:gravity">center</item>
+
+
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/textSize_AboutTextView</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:longClickable">false</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
 
