--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -12,7 +12,7 @@
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:columnCount="2">
 
         <TextView
@@ -30,20 +30,20 @@
             style="@style/aboutTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:text="Version:"
-            app:layout_column="0"
             app:layout_columnWeight="1"
+            app:layout_column="0"
             app:layout_row="1" />
 
         <TextView
             style="@style/aboutTextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center_horizontal"
+            app:layout_columnWeight="1"
             android:text="V."
             app:layout_column="1"
-            app:layout_columnWeight="1"
             app:layout_row="1" />
 
         <TextView
@@ -52,29 +52,30 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="Author:"
-            app:layout_column="0"
             app:layout_columnWeight="1"
+            app:layout_column="0"
             app:layout_row="2" />
 
         <TextView
             style="@style/aboutTextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="Pankaj Nimgade"
-            app:layout_column="1"
             app:layout_columnWeight="1"
+            app:layout_column="1"
             app:layout_row="2" />
 
         <Button
             android:id="@+id/AboutFragment_close_button"
             style="@style/ButtonKeyPad"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:gravity="center_horizontal"
             android:text="Close"
             android:textAllCaps="false"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
             app:layout_column="0"
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
