--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -20,11 +20,12 @@
     </style>
 
     <style name="InputTextDisplay" parent="android:TextAppearance.Material.Widget.TextView">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
-        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
 
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
@@ -36,18 +37,19 @@
     </style>
 
     <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
-        <item name="android:layout_margin">4dp</item>
-
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
 
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_InputEquationText</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:longClickable">true</item>
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
 
     </style>
 
