--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,17 +14,17 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:textColorSecondary">@android:color/holo_purple</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorSecondary">@android:color/holo_purple</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:actionOverflowButtonStyle">@style/actionOverflowButtonStyle</item>
     </style>
 
     <style name="actionOverflowButtonStyle" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@android:color/holo_purple</item>
+        <item name="android:tint">@android:color/black</item>
     </style>
 
 
@@ -45,12 +45,12 @@
     </style>
 
     <style name="InputTextDisplay" parent="android:TextAppearance.Widget.TextView">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
-        <item name="android:layout_margin">4dp</item>
-
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
 
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_Keypad_Button</item>
@@ -60,12 +60,12 @@
     </style>
 
     <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Large</item>
         <item name="android:clickable">false</item>
-        <item name="android:layout_margin">4dp</item>
-
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
 
         <item name="android:textAllCaps">true</item>
         <item name="android:textSize">@dimen/textSize_InputEquationText</item>
