--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorPrimaryText</item>
+        <item name="android:textColorSecondary">@color/colorSecondaryText</item>
+    </style>
+
     <style name="ButtonKeyPad" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
@@ -15,7 +25,6 @@
         <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:textColor">@color/button_text</item>
         <item name="android:onClick">inputCollector</item>
-
 
     </style>
 
@@ -33,7 +42,6 @@
         <item name="android:longClickable">true</item>
 
         <item name="android:background">?attr/selectableItemBackground</item>
-        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="InputEquationTextDisplay" parent="android:TextAppearance.Widget.TextView">
@@ -48,7 +56,6 @@
         <item name="android:textSize">@dimen/textSize_InputEquationText</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:longClickable">true</item>
-        <item name="android:textColor">@android:color/black</item>
         <item name="android:background">?attr/selectableItemBackground</item>
 
     </style>
